[package]
name = "pallet-cess-staking"
version = "4.0.0-dev"
authors = ["CESS LAB"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.cess.cloud"
repository = "https://github.com/CESSProject/cess/"
description = "FRAME pallet cess staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { workspace = true, optional = true }
codec = { version = "3.2.2", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-session = { workspace = true, features = [ "historical" ] }
pallet-authorship = { workspace = true }
sp-application-crypto = { workspace = true }
frame-election-provider-support = { workspace = true }
log = { workspace = true }

# Optional imports for benchmarking
frame-benchmarking = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }

[dev-dependencies]
sp-tracing = { workspace = true }
sp-core = { workspace = true }
sp-npos-elections = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-staking-reward-curve = { workspace = true }
pallet-bags-list = { workspace = true }
substrate-test-utils = { workspace = true }
frame-benchmarking = { workspace = true }
frame-election-provider-support = { workspace = true }
rand_chacha = { workspace = true }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
	"log/std",
	"frame-election-provider-support/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"rand_chacha",
]
try-runtime = ["frame-support/try-runtime"]
