[package]
name = "pallet-storage-handler"
authors = ["CESS LAB"]
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CESSProject/cess"
description = "FRAME pallet for sminer management"
readme = "README.md"

[dependencies]
log = { version = "0.4.14", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { default-features = false, features = ['derive'], version = "2.0.1" }
serde = { version = "1.0.136", optional = true }

# substrate pallet
frame-support = { version = "4.0.0-dev", git = 'https://github.com/CESSProject/substrate', branch = "cess-polkadot-v0.9.42", default-features = false }
frame-system = { version = "4.0.0-dev", git = 'https://github.com/CESSProject/substrate', branch = "cess-polkadot-v0.9.42", default-features = false }
sp-std = { version = "5.0.0", git = 'https://github.com/CESSProject/substrate', branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-balances = { version = "4.0.0-dev", git = 'https://github.com/CESSProject/substrate', branch = "cess-polkadot-v0.9.42", default-features = false }
sp-runtime = { version = "7.0.0", git = 'https://github.com/CESSProject/substrate', branch = "cess-polkadot-v0.9.42", default-features = false }
frame-benchmarking = { version = '4.0.0-dev', git = 'https://github.com/CESSProject/substrate', branch = "cess-polkadot-v0.9.42", default-features = false }

# local dependencies
cp-cess-common = { path = '../../primitives/common', default-features = false }
pallet-cess-treasury = { default-features = false, path = "../cess-treasury" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
	"serde",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-benchmarking/std",
    "pallet-cess-treasury/std",
]

try-runtime = [ "frame-support/try-runtime" ]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]