[package]
name = "pallet-tee-worker"
authors = ["CESS LAB"]
version = "0.7.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/CESSProject/cess"
description = "FRAME pallet for TEE Worker management"
readme = "README.md"

[dependencies]
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { default-features = false, features = ['derive'], version = "2.0.1" }
serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }
log = { version = "0.4.14", default-features = false }
cp-cess-common = { path = '../../primitives/common', version = '0.1.0', default-features = false }
cp-scheduler-credit = { path = '../../primitives/scheduler-credit', version = '0.1.0', default-features = false }
cp-enclave-verify = { path = '../../primitives/enclave-verify', version = '0.1.0', default-features = false }

sp-application-crypto = { version = '7.0.0', branch = 'cess-polkadot-v0.9.36', git = 'https://github.com/CESSProject/substrate.git', default-features = false }

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '4.0.0-dev'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '5.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '7.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = "cess-polkadot-v0.9.36"
version = '7.0.0'

[dependencies.pallet-cess-staking]
default-features = false
path = '../staking'
version = '4.0.0-dev'

[dev-dependencies]
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
sp-npos-elections = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-session = { version = "4.0.0-dev", default-features = false, features = [
	"historical",
], git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-bags-list = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-scheduler-credit = { version = "0.1.0", default-features = false, path = '../scheduler-credit'}


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-session/std",
	"pallet-cess-staking/std",
	"cp-cess-common/std",
	"cp-enclave-verify/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
