[package]
name = "pallet-tee-worker"
authors = ["CESS LAB"]
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CESSProject/cess"
description = "FRAME pallet for TEE Worker management"
readme = "README.md"

[dependencies]
serde = { workspace = true, optional = true }
codec = { version = "3.2.2", package = "parity-scale-codec", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ['derive'] }
serde_json = { workspace = true, features = ['alloc'] }
log = { workspace = true }
sp-io = { workspace = true }

# local dependencies
cp-cess-common = { path = '../../primitives/common', default-features = false }
cp-scheduler-credit = { path = '../../primitives/scheduler-credit', default-features = false }
cp-enclave-verify = { path = '../../primitives/enclave-verify', default-features = false }

frame-benchmarking = { workspace = true, optional = true }

frame-support = { workspace = true }

frame-system = { workspace = true }

sp-std = { workspace = true }

sp-core = { workspace = true }

sp-runtime = { workspace = true }

pallet-cess-staking = { default-features = false, path = "../staking" }


[dev-dependencies]
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
sp-staking = { workspace = true }
sp-npos-elections = { workspace = true }
frame-election-provider-support = { workspace = true }
pallet-session = { workspace = true }
pallet-bags-list = { workspace = true }
pallet-scheduler-credit = { default-features = false, path = '../scheduler-credit'}


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-session/std",
	"pallet-cess-staking/std",
	"cp-cess-common/std",
	"cp-enclave-verify/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
