[package]
name = "cp-bloom-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
codec = { version = "3.2.2", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
frame-support = {workspace = true}
sp-std = { workspace = true}
cp-cess-common = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"sp-std/std",
    "cp-cess-common/std",
]