[package]
name = "ces-mq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true, features = ['alloc'] }
derive_more = { workspace = true, features = ["display"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
sp-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
spin = { workspace = true, features = ["mutex", "use_ticket_mutex"], optional = true }
# for checkpoint
environmental = { workspace = true, optional = true }
im = { workspace = true }
ces-serde-more = { workspace = true }


[features]
default = ["dispatcher", "queue", "signers", "checkpoint"]
dispatcher = ["spin"]
queue = ["spin"]
signers = [
    "sp-core/full_crypto",
    "ces-serde-more/crypto",
]
checkpoint = ["environmental", "std"]
std = []
