[package]
name = "ces-node-rpc-ext"
version = "0.1.0"
edition = "2021"
authors = ["CESS Network"]
license = "Apache-2.0"
homepage = "https://cess.cloud/"
repository = "https://github.com/CESSProject/cess"

[dependencies]
# third-party dependencies
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
impl-serde = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# primitives
sp-runtime = { workspace = true }
sp-blockchain = { workspace = true }
sp-api = { workspace = true }

# client dependencies
sc-client-api = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-rpc = { workspace = true }

ces-mq = { workspace = true }
ces-pallets = { workspace = true }
pallet-mq-runtime-api = { workspace = true }
ext-types = { workspace = true }
