[package]
name = "ces-pdp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
rsa = { workspace = true, features = ["default"] }
serde = { workspace = true, features = ["derive"] }
threadpool = { workspace = true }
rust-crypto = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
num-bigint-dig = { workspace = true }
num-bigint  = { workspace = true }
sha2 = { workspace = true, default-features = false , features = ["oid"]}
hex = { workspace = true, features = ["alloc"] }