[package]
name = "ces-pois"
version = "0.4.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bigdecimal = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
lazy_static = { workspace = true }
merkle_light = { workspace = true }
num-bigint-dig = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }