[package]
name = "ces-trie-storage"
version = "0.1.0"
edition = "2021"
authors = ["CESS Network"]
license = "Apache-2.0"
homepage = "https://cess.cloud/"
repository = "https://github.com/CESSProject/cess"


[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-core = { workspace = true, features = ["full_crypto"] }
sp-trie = { workspace = true, features = ["std"] }
sp-state-machine = { workspace = true }

serde = { workspace = true, features = ["derive", "alloc"], optional = true }
hash-db = { workspace = true }
trie-db = { workspace = true }
im = { workspace = true, features = ["serde"] }
log = { workspace = true }


[dev-dependencies]
sp-runtime = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-application-crypto = { workspace = true, features = ["std", "full_crypto"] }
hash256-std-hasher = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
impl-serde = { workspace = true }
keccak-hasher = { workspace = true }


[features]
default = ["serde"]
