[package]
name = "ces-types"
version = "0.3.0"
authors = ["CESS Network"]
edition = "2021"

[dependencies]
hex = { workspace = true, features = ["alloc"] }
serde = { workspace = true, optional = true }
parity-scale-codec = { workspace = true, features = ["full"] }
scale-info = { workspace = true, features = ["derive"] }
sp-core = { workspace = true }

ces-mq = { workspace = true  }
crpc = { workspace = true  }

[features]
default = ["std", "enable_serde"]
std = [
	"serde/std",
	"scale-info/std",
	"parity-scale-codec/std",
	"full_crypto",
	"sp-core/std",
	"ces-mq/std",
	"crpc/std",
]
enable_serde = [
	"serde/derive",
	"serde/alloc",
	"scale-info/serde",
]
sgx = [
	"full_crypto",
]
full_crypto = [
	"sp-core/full_crypto",
]
