[package]
name = "cestory"
version = "0.2.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["now"] }
environmental = { workspace = true }
glob = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
hex_fmt = { workspace = true }
hex-literal = { workspace = true }
h2 = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
im = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
num-bigint = { workspace = true }
once_cell = { workspace = true }
parity-scale-codec = { workspace = true, features = [
    "derive",
    "full",
    "chain-error",
] }
parking_lot = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
ring = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
scopeguard = { workspace = true }
serde = { workspace = true, features = ["derive", "std", "rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
# for light_validation
derive_more = { workspace = true, features = ["from", "deref", "deref_mut"] }
hash-db = { workspace = true }
num-traits = { workspace = true }
sp-core = { workspace = true }
tonic = { workspace = true }
rsa = { workspace = true }

subxt = { workspace = true, default-features = true, features = [
    "jsonrpsee",
    "native",
    "unstable-light-client",
] }
subxt-signer = { workspace = true, features = ["sr25519", "subxt"] }

# CESS specific
ces-crypto = { workspace = true, features = ["stream", "full_crypto"] }
ces-serde-more = { workspace = true, features = ["crypto"] }
ces-types = { workspace = true, default-features = true, features = [
    "enable_serde",
    "full_crypto",
] }
cestory-api = { workspace = true, default-features = true }
cestory-pal = { workspace = true }
reqwest-env-proxy = { workspace = true }
sgx-api-lite = { workspace = true }

dashmap = { workspace = true }
threadpool = { workspace = true }
prost = { workspace = true, features = ["std"] }
rust-crypto = { workspace = true }
num-bigint-dig = { workspace = true }
cp-bloom-filter = { workspace = true }
ces-pdp = { workspace = true }
ces-pois = { workspace = true }


[dev-dependencies]
insta = "1.7.2"
rmp-serde = "1"
serde_path_to_error = "0.1.5"
ron = "0.8.0"
ciborium = "0.2.0"
