[package]
name = "cesxt"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
scale-encode = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

subxt = { workspace = true, features = ["jsonrpsee", "native"] }
jsonrpsee = { workspace = true }
primitive-types = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }

ces-types = { workspace = true, default-features = true }
ces-node-rpc-ext-types = { workspace = true, default-features = true }
