[package]
name = "cp-cess-common"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }

frame-support = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }


[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"sp-std/std",
]
